# youtuber_ai_chatbot

./: .gitignore  LICENSE  README.MD  README.rst  chatbot.py  config.py  main.py  pyproject.toml  requirements.txt  vectors-store.pkl
templates/: index.html
youtuber_ai_chatbot/: chatbot.py  main.py  prompts.py
youtuber_ai_chatbot/components/: faq.py  sidebar.py  youtube.py
