[tool.poetry]
name = "youtuber_ai_chatbot"
version = "0.1.0"
description = "Accurate answers for YouTube videos"
authors = ["jorgik1"]
license = "MIT"
readme = "README.md"
packages = [{include = "youtuber_ai_chatbot"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.17.0"
langchain = "0.0.79"
cohere = "^3.2.1"
faiss-cpu = "^1.7.3"
openai = "^0.26.2"
docx2txt = "^0.8"
pillow = "^9.4.0"
pypdf = "^3.3.0"
tenacity = "^8.2.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.1"
pytest = "^7.2.1"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = {version = "^23.1a1", allow-prereleases = true}
flake8 = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
