[tool.poetry]
name = "youtuber_ai_chatbot"
version = "0.1.0"
description = "Accurate answers for YouTube videos"
authors = ["jorgik1"]
license = "MIT"
packages = [{include = "youtuber_ai_chatbot"}]
# other fields...
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.17.0"
langchain = "0.0.79"
faiss-cpu = "^1.7.3"
openai = "^0.26.2"
tiktoken = "^0.4.0"
streamlit_elements = "^0.1"
youtube-transcript-api = "^0.6.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.1"
pytest = "^7.2.1"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = {version = "^23.1a1", allow-prereleases = true}
flake8 = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
